--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.11.4",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "modern-react-qr-reader": "^1.0.12",
     "ngrok": "^5.0.0-beta.2",
+    "prop-type": "^0.0.1",
+    "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "reactstrap": "^9.2.0",
-    "react-infinite-scroll-component": "^6.1.0"
+    "parcel-bundler": "^1.6.1",
+    "@types/woosmap.map": "1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -37,6 +42,11 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
-  }
+    "vite": "^4.4.5",
+    "@babel/core": "7.2.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
+  "keywords": []
 }
